--- a/src/app/modal/modal.component.scss
+++ b/src/app/modal/modal.component.scss
@@ -1,6 +1,6 @@
 .modal {
   width: 40%;
-  height: 253px;
+  min-height: 253px;
   background-color: #0000008a;
   border: 2px solid #2a709c;
   position: fixed;
