--- a/src/app/lesson/lesson.component.scss
+++ b/src/app/lesson/lesson.component.scss
@@ -10,7 +10,6 @@
   background-position: center;
 }
 
-// Main
 main {
   min-height: 600px;
 }
@@ -35,7 +34,7 @@ section {
   padding-right: 40px;
 }
 
-#add {
+.add {
   width: 120px;
   height: 120px;
   color: white;
@@ -51,14 +50,14 @@ section {
   transition-property: transform, background-color;
 }
 
-#add:hover {
+.add:hover {
   color: black;
   background-color: white;
   transform: scale(1.3);
   cursor: pointer;
 }
 
-#add:focus {
+.add:focus {
   outline: none;
 }
 
