--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -2,10 +2,10 @@
   <div class="modal">
     <form [formGroup]="itemForm">
       <input type="text" formControlName="Topic" placeholder="Topic" required>
-      <input type="text" formControlName="Date" placeholder="Date" required>
+      <input #dateInput type="text" formControlName="Date" placeholder="Date YYYY-MM-DD" required>
       <input type="text" formControlName="Lecturer" placeholder="Lecturer" required>
     </form>
-    <p class="error" *ngIf="error">Please fill all fields</p>
+    <p class="error" *ngIf="error">Please fill all fields correctly</p>
     <div class="btnGroup">
       <button type="button" class="addToList" (click)="getItems()">Add to List</button>
       <button type="button" class="close" (click)="closeModal()">Close</button>
