--- a/src/app/lesson/lesson.component.scss
+++ b/src/app/lesson/lesson.component.scss
@@ -74,7 +74,10 @@ section {
   height: 46px;
   border: 1px solid black;
   font-size: 20px;
-  padding: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
 }
 
 .item input {
@@ -108,7 +111,9 @@ section {
   margin-right: 5px;
   padding-left: 5px;
   padding-right: 5px;
-  padding-bottom: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 2px solid black;
 }
 
